<resources>
    <string name="app_name">Movsearch</string>
    <string name="ubah_bahasa">Ubah Bahasa</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_tvshow">Tv Show</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_favorite_movie">Movies</string>
    <string name="tab_favorite_tvshow">TV Show</string>
    <string name="bar_detail_film">Detail Film</string>
    <string name="bar_search_film">Search Movies/TV Show</string>
    <string name="deskripsi_detail">Description</string>
    <string name="kamu_pilih">Kamu memilih :</string>
    <string name="language">en-US</string>
    <string name="poster_film">Poster Film</string>
    <string name="favorite_delete">Remove Favorite</string>
    <string name="favorite_add">Add Favorite</string>
    <string name="favorite_success">Success</string>
    <string name="favorite_failed">Failed</string>
    <string name="movies_notFound">Movies not found</string>
    <string name="tvshow_notFound">TV Show not found</string>
    <string name="search_mvtv">Search Movie/TV Show</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_tvshow">Search TV Show</string>
    <string name="message_daily_reminder">See Movies and TV Shows, lets check now!</string>
    <string name="message_release_reminder">Today is the release of a new movies, lets check now!</string>
    <string name="notif_settings">Notifications</string>
    <string name="sw_daily">Daily Reminder</string>
    <string name="sw_release">Release Today</string>
    <string name="notif_swtch_daily_on">Daily notifications are turned ON!</string>
    <string name="notif_swtch_daily_off">Daily notifications are turned OFF!</string>
    <string name="notif_swtch_release_on">Release notifications are turned ON!</string>
    <string name="notif_swtch_release_off">Release notifications are turned OFF!</string>
    <string name="appwidget_text">Film Favorite</string>
    <string name="empty_text">NO DATA</string>
    <string name="msg_questionExit">Keluar dari aplikasi?</string>
    <string name="msg_questionYes">Klik Ya untuk keluar!</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msgTap2x">Tap sekali lagi untuk keluar</string>

    <!-- About/Privacy -->
    <string name="cp2019">Copyright - 2020</string>
    <string name="versionApp">Version 1.0</string>
    <string name="privacy_policy">Privacy Policy \n</string>
    <string name="txt1">Muh Riza Faizal built the Movsearch app as a Free app. This SERVICE is provided by at no cost and is intended for use as is.
        \n\n
        This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
        \n\n
        If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        \n\n
        The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Movsearch unless otherwise defined in this Privacy Policy.</string>
    <string name="txt2">\nInformation Collection and Use</string>
    <string name="txt3">\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information, including but not limited to Muh Riza Faizal, raizel.nobb777@gmail.com, +62 895 3546 4156 5. The information that I request will be retained on your device and is not collected by me in any way.
    \n\n
    The app does use third party services that may collect information used to identify you.
    \n\n
    Link to privacy policy of third party service providers used by the app : <b>Google Play Services</b>, <b>AdMob</b></string>
    <string name="txt4">\nLog Data</string>
    <string name="txt5">\nI want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="txt6">\nCookies</string>
    <string name="txt7">\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.
    \n\nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="txt8">\nService Providers</string>
    <string name="txt9">\nI may employ third-party companies and individuals due to the following reasons :
    To facilitate our Service, To provide the Service on our behalf, To perform Service-related services, or To assist us in analyzing how our Service is used.
    \n\n
    I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="txt10">\nSecurity</string>
    <string name="txt11">\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</string>
    <string name="txt12">\nLinks to Other Sites</string>
    <string name="txt13">\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="txt14">\nChildren’s Privacy</string>
    <string name="txt15">\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</string>
    <string name="txt16">\nChanges to This Privacy Policy</string>
    <string name="txt17">\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</string>
    <string name="txt18">\nContact Us</string>
    <string name="txt19">\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at : <b>raizel.nobb777@gmail.com</b>.</string>

    <!-- Ad -->
    <!--    <string name="ad_banner">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="ad_intersial">ca-app-pub-3940256099942544/1033173712</string>-->
    <string name="ad_banner">ca-app-pub-4199779175308861/4775301800</string>
    <string name="ad_intersial">ca-app-pub-4199779175308861/9532997985</string>
</resources>
