<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PrivacyActivity">

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/privacy_policy"
                android:textSize="27sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt2"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt4"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt6"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/txt7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt8"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt10"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt12"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt14"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt16"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt18"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>

    </RelativeLayout>

</ScrollView>