<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NotifActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/notif_settings"
            android:layout_margin="16dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtch_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sw_daily"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:theme="@style/swtchNotif"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtch_release"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sw_release"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textAllCaps="true"
            android:theme="@style/swtchNotif"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

    </LinearLayout>

</ScrollView>