<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DetailActivityTVShow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo_detailTV"
            android:layout_width="0dp"
            android:contentDescription="@string/poster_film"
            android:layout_height="wrap_content"
            android:layout_marginBottom="430dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat" />

        <ProgressBar
            android:id="@+id/progressBar_detailTV"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="411dp"
            android:layout_marginTop="842dp"
            android:layout_marginEnd="411dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/txt_release_detailTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.94" />

        <TextView
            android:id="@+id/txt_judul_detailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_blue_dark"
            android:drawableStart="@drawable/ic_judul"
            android:drawableLeft="@drawable/ic_judul"
            android:drawablePadding="4dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_detailTV"
            tools:text="Judul" />

        <TextView
            android:id="@+id/txt_release_detailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_dark"
            android:drawableStart="@drawable/ic_genre"
            android:drawableLeft="@drawable/ic_genre"
            android:drawablePadding="4dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/txt_score_detailTV"
            app:layout_constraintTop_toBottomOf="@+id/txt_judul_detailTV"
            tools:text="Popularity" />

        <TextView
            android:id="@+id/txt_score_detailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_green_dark"
            android:drawableStart="@drawable/ic_score"
            android:drawableLeft="@drawable/ic_score"
            android:drawablePadding="4dp"
            android:elevation="2dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_judul_detailTV"
            tools:text="Score" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_release_detailTV" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi_detail"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="558dp" />

        <include
            android:id="@+id/include_specifications"
            layout="@layout/layout_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adBannerDetailTVs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            ads:adSize="BANNER"
            ads:adUnitId="@string/ad_banner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_specifications"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_favTvs_detail"
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:background="@android:color/holo_red_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            tools:text="submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txt_release_detailTV"
            app:layout_constraintTop_toBottomOf="@+id/txt_judul_detailTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>